# letteranne

./: .dockerignore  .editorconfig  .env.dev.example  .env.example  .gitignore  .pre-commit-config.yaml  .tool-versions  DEPLOYMENT.md  Dockerfile  Makefile  README.md  biome.json  compose.yml  docker-compose.prod.yml  docker-compose.yml  justfile  manage.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements.in  requirements.txt
backend/: .dockerignore  manage.py  pyproject.toml
backend/apps/auth/: apps.py  gdpr_views.py  views.py
backend/apps/common/: errors.py
backend/apps/discovery/: apps.py  views.py
backend/apps/letters/: apps.py  models.py  services.py  views.py
backend/apps/letters/migrations/: 0001_initial.py
backend/apps/moderation/: apps.py  models.py  views.py
backend/apps/moderation/migrations/: 0001_initial.py
backend/apps/postcards/: apps.py  models.py  services.py  views.py
backend/apps/postcards/migrations/: 0001_initial.py
backend/apps/profiles/: apps.py  models.py  views.py
backend/config/: asgi.py  urls.py  wsgi.py
backend/config/settings/: base.py  dev.py  prod.py  test.py
backend/tests/integration/: test_auth_endpoints.py  test_database_connection.py  test_discovery_api.py  test_gdpr_api.py  test_healthcheck.py  test_letter_postcard_attach_api.py  test_letters_private_api.py  test_moderation_api.py  test_open_letters_api.py  test_openapi_endpoint.py  test_postcards_api.py  test_profiles_me.py
backend/tests/unit/: test_delivery_scheduler.py  test_model_constraints.py  test_postcard_grants.py
(+179 files in other folders)
