[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "letteranne-backend"
version = "0.1.0"
description = "Letteranne Django API backend"
requires-python = ">=3.13"
dependencies = [
  "Django>=5.1,<6.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "config*"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-django>=4.8.0",
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py", "*_test.py", "tests.py"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
ignore_missing_imports = true
ignore_errors = true
exclude = [
  "backend/apps/.*/migrations/.*",
]

